// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox should render Checkbox component 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "gap": 8,
      "width": 300,
    }
  }
>
  <View
    accessibilityRole="checkbox"
    accessibilityState={
      {
        "checked": false,
      }
    }
    id=":r0:"
    size="$11"
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#fff",
        "borderBottomColor": "#282828",
        "borderBottomLeftRadius": 4,
        "borderBottomRightRadius": 4,
        "borderBottomWidth": 1,
        "borderLeftColor": "#282828",
        "borderLeftWidth": 1,
        "borderRightColor": "#282828",
        "borderRightWidth": 1,
        "borderStyle": "solid",
        "borderTopColor": "#282828",
        "borderTopLeftRadius": 4,
        "borderTopRightRadius": 4,
        "borderTopWidth": 1,
        "height": 20,
        "justifyContent": "center",
        "width": 20,
      }
    }
  />
  <Text
    htmlFor=":r0:"
    id=":r1:"
    style={
      {
        "alignItems": "center",
        "backgroundColor": "transparent",
        "color": "#fff",
        "display": "flex",
        "fontFamily": "NunitoSans_7pt-Medium",
        "fontSize": 18,
        "letterSpacing": -0.5,
        "lineHeight": 50,
      }
    }
    suppressHighlighting={true}
    userSelect="none"
  >
    Label
  </Text>
</View>
`;

exports[`Checkbox should render Checkbox with checked true 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "gap": 8,
      "width": 300,
    }
  }
>
  <View
    accessibilityRole="checkbox"
    accessibilityState={
      {
        "checked": true,
      }
    }
    id=":r2:"
    size="$11"
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#242424",
        "borderBottomColor": "#494949",
        "borderBottomLeftRadius": 4,
        "borderBottomRightRadius": 4,
        "borderBottomWidth": 1,
        "borderLeftColor": "#494949",
        "borderLeftWidth": 1,
        "borderRightColor": "#494949",
        "borderRightWidth": 1,
        "borderStyle": "solid",
        "borderTopColor": "#494949",
        "borderTopLeftRadius": 4,
        "borderTopRightRadius": 4,
        "borderTopWidth": 1,
        "height": 20,
        "justifyContent": "center",
        "width": 20,
      }
    }
  >
    <View
      pointerEvents="none"
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight="12"
        bbWidth="15"
        fill="none"
        focusable={false}
        height={12}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 12,
              "width": 15,
            },
          ]
        }
        vbHeight={12}
        vbWidth={15}
        width={15}
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
            ]
          }
        >
          <RNSVGPath
            d="M4.767 9.468L1.21 5.736 0 6.998 4.767 12 15 1.262 13.798 0 4.767 9.468z"
            fill={
              {
                "payload": 4294967295,
                "type": 0,
              }
            }
            propList={
              [
                "fill",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
  <Text
    htmlFor=":r2:"
    id=":r3:"
    style={
      {
        "alignItems": "center",
        "backgroundColor": "transparent",
        "color": "#242424",
        "display": "flex",
        "fontFamily": "NunitoSans_7pt-Medium",
        "fontSize": 18,
        "letterSpacing": -0.5,
        "lineHeight": 50,
      }
    }
    suppressHighlighting={true}
    userSelect="none"
  >
    Label
  </Text>
</View>
`;
